welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: type mismatch;
 found   : Array[java.awt.Color]
 required: Array[Int]
    ligne(tabColor)
          ^Array1:22: error: type mismatch;
 found   : Int
 required: java.awt.Color
    setCouleurBrosse(c)
                     ^